Merging 2.2.27 branch changes.